fixed overflow issue with table

--- a/assets/css/style.css
+++ b/assets/css/style.css
@@ -304,6 +304,7 @@ a.navbar-brand {
     background-color: #dfddda;
     border-radius: 1.0%;
     font-family: "Lobster", sans-serif;
+    overflow-x: hidden;
 }
 
 .elo-col {
